--- a/web/public/index.html
+++ b/web/public/index.html
@@ -9,6 +9,7 @@
       content="Aplicação desenvolvida na Next Level Weeb 02 da Rocketseat"
     />
     <title>Proffy</title>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
